--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,61 @@
 img#logo {
   width: 90px;
 }
+button.go_to_top {
+  position: fixed;
+  right: 6px;
+  bottom: 3rem;
+  border: 1px solid #4b441c;
+  background-color: brown;
+  color: white;
+  z-index: 100;
+  box-shadow: 0px 0px 15px #c1c1c1;
+  padding: 3px 8px;
+}
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+  color: rgb(180 47 47);
+  font-weight: 600;
+}
+.topbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.topbar .container > div {
+  display: flex;
+}
+
+.topbar .container {}
+
+.topbar__left .item {
+  padding: 1rem 0.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.topbar__right a {
+  padding: 1rem 0.5rem;
+  color: #e02949;
+}
+
+.topbar__left .item p {
+  margin: 0;
+  margin-left: 5px;
+}
+
+.topbar {
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #e9e9e9;
+}
+
+nav.bg-body-tertiary.navbar.navbar-expand-lg.navbar-light {
+  position: sticky;
+  top: 0;
+  box-shadow: 0 2px 2px #ebebeb;
+  background-color: rgb(249 249 249 / 95%)!important;
+  z-index: 10;
+}
 .banner {
   background: url(/src/assets/images/banner.jpg) no-repeat;
   background-color: rgba(255, 219, 219, 0.057);
@@ -201,6 +255,13 @@ button.btn {
 .stories .card .stars svg {
   color: #ea3756;
 }
+
+/* faq */
+.faq{
+  background: url('./assets/images/faq-bg.jpg') no-repeat;
+  background-size: cover;
+  padding: 5rem 0;
+}
 /* footer */
 section.footer {
   padding-top: 3rem;
@@ -214,7 +275,25 @@ section.footer p svg {
   margin-right: 8px;
 }
 
+.footer_top_item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 768px) {
+  .topbar .container{
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .banner .container{
+    width: 100%;
+  }
+  .topbar .container div .item{
+    padding: 10px;
+    padding-bottom: 0;
+  }
   .feature__cards {
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -242,6 +321,6 @@ section.footer p svg {
     grid-gap: 1.5rem;
   }
   .banner .container{
-    width: 425px;
+    width:100%;
   }
 }
